--- a/resource.qrc
+++ b/resource.qrc
@@ -1,6 +1,6 @@
 <RCC>
     <qresource prefix="/">
         <file>resource/avia.png</file>
-        <file>resource/file.xml</file>
+        <file>resource/AMOFSG_Dictionary.txt</file>
     </qresource>
 </RCC>
