--- a/resource.qrc
+++ b/resource.qrc
@@ -1,6 +1,8 @@
 <RCC>
     <qresource prefix="/">
-        <file>resource/avia.png</file>
         <file>resource/AMOFSG_Dictionary.txt</file>
+        <file>resource/meteo.ico</file>
+        <file>resource/meteo.png</file>
     </qresource>
+    <qresource prefix="/icons_app,rc"/>
 </RCC>
